k8s/policies/kyverno/nginix-unsigned-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-test
  namespace: hardened
spec:
  serviceAccountName: custom-sa
  containers:
  - name: nginx
    image: nginx
