k8s/policies/kyverno/disallow-plain-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-plain-secret
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: block-manually-created-secrets

      match:
        any:
          - resources:
              kinds:
                - Secret
              namespaces:
                - hardened

      exclude:
        any:
          - resources:
              names:
                - default-token-*
                - sh.helm.release.*

      validate:
        message: "Manual Secret resources are not allowed in the hardened namespace. Use External Secrets or Sealed Secrets."

        deny: {}
