k8s/policies/kyverno/require-sealed-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-sealed-secret
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: only-sealed-secrets

      match:
        any:
          - resources:
              kinds:
                - SealedSecret
              namespaces:
                - hardened

      validate:
        message: "Only encrypted SealedSecrets are permitted."
        pattern:
          spec:
            encryptedData: "?*"
