k8s/policies/kyverno/verify-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: verify-staocube-cosign-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - hardened
    exclude:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          names:
          - security-report-server
          namespaces:
          - hardened
    verifyImages:
    - imageReferences:
      - "staocube/*"
      - "docker.io/staocube/*"
      - "index.docker.io/staocube/*"
      mutateDigest: true
      required: true
      verifyDigest: true
      attestors:
      - entries:
        - keys:
            publicKeys: |
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEW0u8CmQMY/CvDuHTe3JbDv5RrsZx
[...]
              -----END PUBLIC KEY-----
            signatureAlgorithm: sha256
